# 2026-algorithm-project

./: .gitignore  CMakeLists.txt  README.md  Suffix_Array_Minimizer.cpp  brute_force.cpp  bruteforce.cpp  bwt_mapper.cpp  dataset_generator.cpp  hash_dp.cpp  hash_greedy.cpp  main.cpp  read_generator.cpp  redblackTree_DP.cpp  redblackTree_Greedy.cpp  reference_builder.cpp  result_bwt.txt  snp_list.txt  trap_generator.cpp
